Set initial content from tag content

--- a/src/demo/html/demo.html
+++ b/src/demo/html/demo.html
@@ -21,7 +21,10 @@
         init="false"
       ></tinymce-editor>
       <h3>Default</h3>
-      <tinymce-editor></tinymce-editor>
+      <tinymce-editor>
+        <p>The quick <b>brown</b> fox.</p>
+        <p>Jumps over the <i>lazy</i> dog.</p>
+      </tinymce-editor>
     </div>
   <script src="../../../node_modules/tinymce/tinymce.js"></script>
   <script src="../../../dist/Editor.js"></script>
