Added readonly attribute

--- a/src/demo/html/demo.html
+++ b/src/demo/html/demo.html
@@ -24,8 +24,8 @@
         toolbar="bold"
         plugins="image"
       ></tinymce-editor>
-      <h3>Default</h3>
-      <tinymce-editor>
+      <h3>Default with readonly</h3>
+      <tinymce-editor readonly>
         <p>The quick <b>brown</b> fox.</p>
         <p>Jumps over the <i>lazy</i> dog.</p>
       </tinymce-editor>
