Add placeholder, autofocus

--- a/src/demo/html/demo.html
+++ b/src/demo/html/demo.html
@@ -10,7 +10,7 @@
 	  <h2>TinyMCE Web Component Demo Page</h2>
     <div id="ephox-ui">
       <h3>Attribute config</h3>
-      <tinymce-editor
+      <tinymce-editor autofocus
         toolbar="undo redo | bold"
         menubar="false"
         plugins="lists image"
