--- a/src/demo/html/demo.html
+++ b/src/demo/html/demo.html
@@ -47,6 +47,6 @@
     })();
   </script>
   <script src="../../../node_modules/tinymce/tinymce.js"></script>
-  <script src="../../../dist/tinymce-webcomponent.js"></script>
+  <script src="../../../dist/tinymce-wc.js"></script>
   </body>
 </html>
