Changed initial content to be encoded HTML to stop script injection

--- a/src/demo/html/demo.html
+++ b/src/demo/html/demo.html
@@ -27,8 +27,9 @@
       ></tinymce-editor>
       <h3>Default with readonly</h3>
       <tinymce-editor readonly>
-        <p>The quick <b>brown</b> fox.</p>
-        <p>Jumps over the <i>lazy</i> dog.</p>
+        &lt;p&gt;The quick &lt;b&gt;brown&lt;/b&gt; fox.&lt;/p&gt;
+        &lt;p&gt;Jumps over the &lt;i&gt;lazy&lt;/i&gt; dog.&lt;/p&gt;
+        &lt;p&gt;&lt;img src=&quot;http://www.google.com/google.jpg&quot; onload=&quot;javascript: alert('hello');&quot;/&gt;&lt;/p&gt;
       </tinymce-editor>
     </div>
   <script>
