Attributes++; events 'on-'; config=resolve;  no init='false'; no 'config-'

--- a/src/demo/html/common-attributes.html
+++ b/src/demo/html/common-attributes.html
@@ -25,6 +25,15 @@
     <li>powerpaste_html_import</li>
     <li>powerpaste_allow_local_images</li>
     <li>resize</li>
+    <li>skin</li>
+    <li>skin_url</li>
+    <li>images_upload_url</li>
+    <li>images_upload_handler</li>
+    <li>images_upload_base_path</li>
+    <li>images_upload_credentials</li>
+    <li>images_reuse_filename</li>
+    <li>icons</li>
+    <li>icons_url</li>
     <li>setup</li>
   </ul>
   <tinymce-editor
