--- a/src/demo/html/events.html
+++ b/src/demo/html/events.html
@@ -28,9 +28,9 @@
   <h1>TinyMCE Web Component Events Demo Page</h1>
   <tinymce-editor
     setup="editors.setupFn"
-    onInit="editors.initFn"
-    onChange="editors.changeFn"
-    onClick="editors.clickFn"
+    on-Init="editors.initFn"
+    on-Change="editors.changeFn"
+    on-Click="editors.clickFn"
   ></tinymce-editor>
   <script src="../../../node_modules/tinymce/tinymce.js"></script>
   <script src="../../../dist/tinymce-wc.js"></script>
