INT-2231: Add Jenkinsfile and ready for publishing

--- a/src/demo/html/basic.html
+++ b/src/demo/html/basic.html
@@ -10,6 +10,6 @@
   <h1>TinyMCE Web Component Simple Demo Page</h1>
   <tinymce-editor></tinymce-editor>
   <script src="../../../node_modules/tinymce/tinymce.js"></script>
-  <script src="../../../dist/tinymce-wc.js"></script>
+  <script src="../../../dist/tinymce-webcomponent.js"></script>
   </body>
 </html>
