--- a/src/demo/html/common-attributes.html
+++ b/src/demo/html/common-attributes.html
@@ -49,6 +49,6 @@
 &lt;p&gt;This recreates the same settings as the &lt;a href=&quot;https://www.tiny.cloud/docs/demo/basic-example/&quot;&gt;basic example&lt;/a&gt;&lt;p&gt;
   </tinymce-editor>
   <script src="../../../node_modules/tinymce/tinymce.js"></script>
-  <script src="../../../dist/tinymce-wc.js"></script>
+  <script src="../../../dist/tinymce-webcomponent.js"></script>
   </body>
 </html>
