--- a/src/demo/html/content.html
+++ b/src/demo/html/content.html
@@ -26,6 +26,6 @@
 &lt;/table&gt;
   </tinymce-editor>
   <script src="../../../node_modules/tinymce/tinymce.js"></script>
-  <script src="../../../dist/tinymce-wc.js"></script>
+  <script src="../../../dist/tinymce-webcomponent.js"></script>
   </body>
 </html>
