--- a/src/demo/html/events.html
+++ b/src/demo/html/events.html
@@ -33,6 +33,6 @@
     on-Click="editors.clickFn"
   ></tinymce-editor>
   <script src="../../../node_modules/tinymce/tinymce.js"></script>
-  <script src="../../../dist/tinymce-wc.js"></script>
+  <script src="../../../dist/tinymce-webcomponent.js"></script>
   </body>
 </html>
