INT-2233: Fixed typos in title of demo pages

--- a/src/demo/html/common-attributes.html
+++ b/src/demo/html/common-attributes.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <title>TinyMCE WebComponent Common Attributes Demo Page</title>
+    <title>TinyMCE Web Component Common Attributes Demo Page</title>
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   </head>
 
   <body>
-  <h1>TinyMCE Web Common Attributes Demo Page</h1>
+  <h1>TinyMCE Web Component Common Attributes Demo Page</h1>
   <p>Supports the common attributes:</p>
   <ul>
     <li>toolbar</li>
