INT-3115: Added promotion setting to allow hiding the button

--- a/src/demo/html/basic.html
+++ b/src/demo/html/basic.html
@@ -8,7 +8,7 @@
 
   <body>
   <h1>TinyMCE Web Component Simple Demo Page</h1>
-  <tinymce-editor></tinymce-editor>
+  <tinymce-editor promotion="false"></tinymce-editor>
   <script src="../../../node_modules/tinymce/tinymce.js"></script>
   <script src="../../../dist/tinymce-webcomponent.js"></script>
   </body>
