--- a/src/demo/html/events.html
+++ b/src/demo/html/events.html
@@ -31,6 +31,7 @@
     on-Init="editors.initFn"
     on-Change="editors.changeFn"
     on-Click="editors.clickFn"
+    promotion="false"
   ></tinymce-editor>
   <script src="../../../node_modules/tinymce/tinymce.js"></script>
   <script src="../../../dist/tinymce-webcomponent.js"></script>
