--- a/src/demo/html/common-attributes.html
+++ b/src/demo/html/common-attributes.html
@@ -45,7 +45,8 @@
     toolbar="undo redo | formatselect | bold italic backcolor | 
     alignleft aligncenter alignright alignjustify | 
     bullist numlist outdent indent | removeformat | help"
-    content_css="//www.tiny.cloud/css/codepen.min.css" >
+    content_css="//www.tiny.cloud/css/codepen.min.css"
+    promotion="false" >
 &lt;p&gt;This recreates the same settings as the &lt;a href=&quot;https://www.tiny.cloud/docs/demo/basic-example/&quot;&gt;basic example&lt;/a&gt;&lt;p&gt;
   </tinymce-editor>
   <script src="../../../node_modules/tinymce/tinymce.js"></script>
