INT-3354: Update to set the default cloud channel to 8 and properly set license key to all demos

--- a/src/demo/html/basic.html
+++ b/src/demo/html/basic.html
@@ -8,7 +8,12 @@
 
   <body>
   <h1>TinyMCE Web Component Simple Demo Page</h1>
-  <tinymce-editor promotion="false"></tinymce-editor>
+  <script>
+    var editorConfig = {
+      license_key: 'gpl'
+    };
+  </script>
+  <tinymce-editor config="editorConfig" promotion="false"></tinymce-editor>
   <script src="../../../node_modules/tinymce/tinymce.js"></script>
   <script src="../../../dist/tinymce-webcomponent.js"></script>
   </body>
