--- a/src/demo/html/common-attributes.html
+++ b/src/demo/html/common-attributes.html
@@ -36,7 +36,13 @@
     <li>icons_url</li>
     <li>setup</li>
   </ul>
+  <script>
+    var editorConfig = {
+      license_key: 'gpl'
+    };
+  </script>
   <tinymce-editor
+    config="editorConfig"
     height="500"
     menubar="false"
     plugins="advlist autolink lists link image charmap print preview anchor 
